# DocRAG

./: Streamlit_app.py  pyproject.toml  requirements.txt
data/: Qwen3_Technical_Report.txt
src/Config/: config.py
src/Document_ingestion/: document_processor.py
src/Graph_builder/: graph_builder.py
src/Nodes/: nodes.py  react_node.py
src/State/: rag_state.py
src/Vectorstore/: vectorstore.py
